--- a/scripts/plop-templates/structural-block-registration.hbs
+++ b/scripts/plop-templates/structural-block-registration.hbs
@@ -19,7 +19,7 @@ export default () => {
 			multiple: {{multiple}},
 		},
 
-		attributes: {},
+		attributes: {{{attributes}}},
 
 		edit: {{type}},
 		save: {{type}}.Content,
